# local-rag-app

./: .gitignore  .instructions.md  README.md  pyproject.toml
src/local_rag_chat/: __init__.py  app.py  document_processor.py  models.py  rag_chain.py  ui.py  utils.py
src/local_rag_chat.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
